--- a/css/main.css
+++ b/css/main.css
@@ -38,12 +38,15 @@ body {
   padding: 10px;
 }
 
-.box {
-  color: silver;
-  border: solid black 3px;
+.letter-box {
+  width: 50px;
+  height: 50px;
+  color: #444;
+  border: solid #444 3px;
   border-radius: 15%;
   padding: 5px;
   margin: 5px;
   font-size: 150%;
+  text-align: center;
 }
 
