--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   font-family: "Andale Mono", serif;
+  background-color: black;
 }
 
 .page-header {
@@ -28,7 +29,7 @@ body {
   display: grid;
   grid-template-columns: 50px 50px 50px 50px 50px;
   grid-gap: 5px;
-  background-color: #fff;
+  background-color: black;
   color: #444;
 
   align-items: center;
@@ -50,3 +51,16 @@ body {
   text-align: center;
 }
 
+.footer {
+  font-size: small;
+  color: darkgray;
+  position: fixed;
+  text-align: center;
+  bottom: 20px;
+  width: 100%;
+}
+
+a {
+  color: darkgray;
+  text-decoration: none; /* no underline */
+}
