--- a/css/main.css
+++ b/css/main.css
@@ -42,8 +42,8 @@ body {
 .letter-box {
   width: 50px;
   height: 50px;
-  color: #444;
-  border: solid #444 3px;
+  color: whitesmoke;
+  border: solid darkgray 3px;
   border-radius: 15%;
   padding: 5px;
   margin: 5px;
